<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/graph_effects_om_bitmapshader"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/graph_effects_om_bitmapshader"/>
    
    <item
        android:id="@+id/graph_effects_om_lineargradient"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/graph_effects_om_lineargradient"/>
    
    <item
        android:id="@+id/graph_effects_om_radialgradient"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/graph_effects_om_radialgradient"/>
    
    <item
        android:id="@+id/graph_effects_om_sweepgradient"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/graph_effects_om_sweepgradient"/>
    
    <item
        android:id="@+id/graph_effects_om_composeshader"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/graph_effects_om_composeshader"/>

</menu>
