<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/border">
	    <TextView 
	        android:id="@+id/locations"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#FF0000"/>
	    
	    <Button 
	        android:id="@+id/get_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/my_location"/>
	</LinearLayout>
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/border">
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/target_location"/>
	    <Button 
	        android:id="@+id/start_proximity_alert"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_proximity_alert"/>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/border">
	    <EditText 
	        android:id="@+id/site"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:minLines="1"
	        android:inputType="text"/>
	    <Button 
	        android:id="@+id/get_coordinate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/get_coordinate"/>
	    <TextView 
	        android:id="@+id/address"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#008080"/>
	</LinearLayout>

</LinearLayout>
